--- a/dressapp/app/assets/stylesheets/suitcases.scss
+++ b/dressapp/app/assets/stylesheets/suitcases.scss
@@ -66,6 +66,10 @@ p, li, a {
   left: 0px;
 }
 
+#sortable1 img {
+  display: none;
+}
+
 #suitcase-side-nav {
   height: 100%;
   width: 0;
